--- a/inde.html
+++ b/inde.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Document</title>
+    <link rel="stylesheet" href=".\css\style.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light bg-transparent">
@@ -32,8 +33,10 @@
       </div>
     </div>
   </nav>
-  <div class="container-fluid">
+  <div class="container">
     <h1 class="display-1 text-center m-5">Tom ford</h1>
+    <h2 class="display-5 text-center m-3"> Software developer</h2>
+    <p class="text-1 text-center ps-5 pe-5">I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded,  don’t hestiate to contact me.</p>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
