Modify the index.html flile by adding a p tag and table

--- a/inde.html
+++ b/inde.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <title>Document</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light bg-transparent">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -33,29 +37,57 @@
       </div>
     </div>
   </nav>
-  <div class="container ms-5 me-5 pe-5 ps-5">
-    <h1 class="display-1 text-center ">Tom ford</h1>
-    <h2 class="display-5 text-center "> Software developer</h2>
-    <p class="text-1 text-center ms-5 me-5 pe-5 ps-5">I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded,  don’t hestiate to contact me.</p>
-  </div>
-  <hr>
-<ul class="list-group list-group-horizontal">
-  <li class="list-group-item">An item</li>
-  <li class="list-group-item">A second item</li>
-  <li class="list-group-item">A third item</li>
-</ul>
-<ul class="list-group list-group-horizontal-sm">
-  <li class="list-group-item">An item</li>
-  <li class="list-group-item">A second item</li>
-  <li class="list-group-item">A third item</li>
-</ul>
-<ul class="list-group list-group-horizontal-md">
-  <li class="list-group-item">An item</li>
-  <li class="list-group-item">A second item</li>
-  <li class="list-group-item">A third item</li>
-  <li class="list-group-item">A third item</li>
-</ul>
+  <div class="container justify-content-center">
+    <h1 class="container text-center">Laura Jong</h1>
+    <h2 class="Subheading text-center">Software Developer</h2>
+</div>
+<div class="subbody">
+    <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded,  don’t hestiate to contact me.</p>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+ <hr>
+ <table class="table">
+     <thead>
+       <tr>
+         <th scope="col">Languages</th>
+         <th scope="col">Frameworks</th>
+         <th scope="col">Skills</th>
+       </tr>
+     </thead>
+     <tbody>
+       <tr>
+         <td>Javascript</td>
+         <td>bootstrap</td>
+         <td>Codekit</td>
+       </tr>
+       <tr>
+         <td>Ruby</td>
+         <td>Ruby and Rails</td>
+         <td>Github</td>
+       </tr>
+       <tr>
+         <td>Html</td>
+         <td>Rspec</td>
+         <td>Codepan</td>
+       </tr>
+       <tr>
+         <td>Css</td>
+         <td>CapyBara</td>
+         <td>Gitlab</td>
+       </tr>
+       <tr>
+         <td colspan="1">Selenium</td>
+         <td>Terminal</td>
+       </tr>
+     </tbody>
+   </table>
+
+</div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+
+</div>
 </body>
+
 </html>
