--- a/inde.html
+++ b/inde.html
@@ -40,54 +40,110 @@
   <div class="container justify-content-center">
     <h1 class="container text-center">Laura Jong</h1>
     <h2 class="Subheading text-center">Software Developer</h2>
-</div>
-<div class="subbody">
-    <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded,  don’t hestiate to contact me.</p>
+  </div>
+  <div class="subbody">
+    <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what
+      you see and have a project you need coded, don’t hestiate to contact me.</p>
 
- <hr>
- <table class="table">
-     <thead>
-       <tr>
-         <th scope="col">Languages</th>
-         <th scope="col">Frameworks</th>
-         <th scope="col">Skills</th>
-       </tr>
-     </thead>
-     <tbody>
-       <tr>
-         <td>Javascript</td>
-         <td>bootstrap</td>
-         <td>Codekit</td>
-       </tr>
-       <tr>
-         <td>Ruby</td>
-         <td>Ruby and Rails</td>
-         <td>Github</td>
-       </tr>
-       <tr>
-         <td>Html</td>
-         <td>Rspec</td>
-         <td>Codepan</td>
-       </tr>
-       <tr>
-         <td>Css</td>
-         <td>CapyBara</td>
-         <td>Gitlab</td>
-       </tr>
-       <tr>
-         <td colspan="1">Selenium</td>
-         <td>Terminal</td>
-       </tr>
-     </tbody>
-   </table>
+    <hr>
+    <div class="row align-items-center">
+      <div class="col">
+        Languages
+      </div>
+      <div class="col">
+        Frameworks
+      </div>
+      <div class="col">
+        Skills
+      </div>
+    </div>
+    <div class="row align-items-center">
+      <div class="col">
+        Javascript
+      </div>
+      <div class="col">
+        bootstrap
+      </div>
+      <div class="col">
+        Codekit
+      </div>
+    </div>
+    <div class="row align-items-center">
+      <div class="col">
+        Ruby
+      </div>
+      <div class="col">
+        Ruby and Rails
+      </div>
+      <div class="col">
+        Github
+      </div>
+    </div>
+    <div class="row align-items-center">
+      <div class="col">
+        Html
+      </div>
+      <div class="col">
+        Rspec
+      </div>
+      <div class="col">
+        Codepan
+      </div>
+    </div>
+    <div class="row align-items-center">
+      <div class="col">
+        Css
+      </div>
+      <div class="col">
+        CapyBara
+      </div>
+      <div class="col">
+        Gitlab
+      </div>
+    </div>
+    <div class="row align-items-center">
+      <div class="col">
+      </div>
+      <div class="col">
+        Selenium
+      </div>
+      <div class="col">
+        Terminal
+      </div>
+    </div>
+  </div>
 
-</div>
+  <div class="container-fluid">
+
+    <div class="row align-items-center">
+      <div class="col">
+        One of three columns
+      </div>
+      <div class="col">
+        <ul class="icons">
+          <li class="gitHub"><img src="images\github.svg" alt=" shows gitHub icon"></li>
+          <li class="linkedin"><img src="images\linkedin.svg" alt="show linkedIn icon"></li>
+          <li class="hand"><img src="images\hand.svg" alt=" shows hand icon"></li>
+          <li class="twitter"><img src="images\twitter.svg" alt="twitter icon"></li>
+          <li class="angellist"><img src="images\mlogo.svg" alt="shows angel list icon"></li>
+        </ul>
+      </div>
+      <div class="col">
+        One of three columns
+      </div>
+    </div>
+
+  </div>
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 
-</div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+
+
+  </div>
 </body>
 
 </html>
