Modify the index.html flile

--- a/inde.html
+++ b/inde.html
@@ -111,15 +111,17 @@
         Terminal
       </div>
     </div>
+    <hr>
   </div>
+  
 
-  <div class="container-fluid">
+  <div class="container mt-5">
 
     <div class="row align-items-center">
-      <div class="col">
-        One of three columns
+      <div class="col text-start">
+        <a><img src="images\work.svg" alt="work">WORK</a>
       </div>
-      <div class="col">
+      <div class="col text-center">
         <ul class="icons">
           <li class="gitHub"><img src="images\github.svg" alt=" shows gitHub icon"></li>
           <li class="linkedin"><img src="images\linkedin.svg" alt="show linkedIn icon"></li>
@@ -128,8 +130,8 @@
           <li class="angellist"><img src="images\mlogo.svg" alt="shows angel list icon"></li>
         </ul>
       </div>
-      <div class="col">
-        One of three columns
+      <div class="col text-end">
+        <a><img src="images\work.svg" alt="work">WORK</a>
       </div>
     </div>
 
